Fix alignment of titles and inner padding of items in lectures page

--- a/src/_sass/lectures.scss
+++ b/src/_sass/lectures.scss
@@ -39,7 +39,7 @@
   align-items: center;
   max-width: 90vw;
   margin: 1em;
-  padding: 0.5em;
+  padding: 2em;
   text-decoration: none;
   
   border-style: solid;
@@ -62,6 +62,7 @@
 }
 
 .lectures-item--title {
+  flex-grow: 1;
   text-align: center;
   text-decoration: none;
 }
